# nearby-earthquakes

./: .gitignore  CHALLENGE.md  Dockerfile  LICENSE.md  RUN.md  pyproject.toml  requirements.txt
scripts/_nix/: stop.sh  test.sh
scripts/windows/: start.cmd  stop.cmd
src/: arguments_parser.py  business_logic.py  earthquakes_getter.py  events.py  formatted_output.py  models.py  nearby_earthquakes.py  settings.py
tests/: conftest.py  test_arguments_parser.py  test_business_logic.py  test_earthquakes_getter.py  utils.py
