[project]
name = "nearby-earthquakes"
license = "MIT"
readme = "README.md"
python = "3.9"

[tool.isort]
profile = "black"
force_single_line = true
line_length = 79
py_version = 39
extend_skip = [".md"]

[tool.black]
line-length = 79
target-version = ['py39']

[tool.mypy]
python_version = 3.9
color_output = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
exclude = ["venv", ".venv", ".pytest_cache", ".md"]

[[tool.mypy.overrides]]
module = ["geopy", "decouple"]
ignore_errors = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = """\
    --disable-warnings
    --cov=src tests/ \
    --flakes \
    --mypy \
    --pycodestyle \
    --verbose \
    --capture=no \
    --color=yes \
    --ignore=venv/,.venv/,.pytest_cache/,*.md \
"""
pep8maxlinelength = 79
testpaths = ["tests"]